--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -24,5 +24,15 @@
   "storybook": {
     "placeholder": "Placeholder",
     "field": "Field"
+  },
+  "loginScreen": {
+    "loginButton": "Log in",
+    "createAccountText": "Have u an account? Create one",
+    "title": "Log in"
+  },
+  "registerScreen": {
+    "registerButton": "Register",
+    "title": "Register"
   }
+
 }
